crates/uitest/fixtures/ty_check/provider_authority_outside_provider.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/provider_authority_outside_provider.fe
---
error[2-0002]: `Evidence` is not found
   ┌─ provider_authority_outside_provider.fe:26:37
   │
26 │     const fn fake_derive<T>(ev: own Evidence<T>) -> Evidence<T>
   │                                     ^^^^^^^^ `Evidence` is not found

error[2-0002]: `Evidence` is not found
   ┌─ provider_authority_outside_provider.fe:26:53
   │
26 │     const fn fake_derive<T>(ev: own Evidence<T>) -> Evidence<T>
   │                                                     ^^^^^^^^ `Evidence` is not found

error[8-0012]: undefined variable
   ┌─ provider_authority_outside_provider.fe:32:23
   │
32 │         let mut sig = builder.method("dup")
   │                       ^^^^^^^ undefined variable `builder`

error[8-0012]: undefined variable
   ┌─ provider_authority_outside_provider.fe:33:9
   │
33 │         builder.emit_method(sig, quote { true })
   │         ^^^^^^^ undefined variable `builder`

error[8-0012]: undefined variable
   ┌─ provider_authority_outside_provider.fe:34:9
   │
34 │         builder.finish()
   │         ^^^^^^^ undefined variable `builder`

error[8-0051]: unresolved effect
   ┌─ provider_authority_outside_provider.fe:28:22
   │
28 │             reflect: Reflect<T>,
   │                      ^^^^^^^^^^ cannot resolve `Reflect<T>` as a type or trait
   │
   = consider defining a type or trait named `Reflect<T>`
   = or bind the effect value with `uses (name: Type)`

error[8-0051]: unresolved effect
   ┌─ provider_authority_outside_provider.fe:29:26
   │
29 │             builder: mut ImplBuilder<T>,
   │                          ^^^^^^^^^^^^^^ cannot resolve `ImplBuilder<T>` as a type or trait
   │
   = consider defining a type or trait named `ImplBuilder<T>`
   = or bind the effect value with `uses (name: Type)`

error[8-0055]: effects are not allowed in a `const fn`
   ┌─ provider_authority_outside_provider.fe:27:9
   │
27 │ ╭         uses (
28 │ │             reflect: Reflect<T>,
29 │ │             builder: mut ImplBuilder<T>,
30 │ │         )
   │ ╰─────────^ remove the `uses (...)` clause
